fix: bug with description placeholder, hide title on mobile

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -133,8 +133,7 @@ p[placeholder]:empty:focus::before {
 	}
 
 	nav > h2 {
-		margin-left: auto;
-		margin-right: auto;
+		display: none;
 	}
 
 	nav > form {
